# automatic-system

./: CMakeLists.txt  README.md  compressed.cpp  object_cordinate.cpp  package.xml
include/: BoundingBox.h  BoundingBoxes.h  compressed.h  object_cordinate.h
src/: compressed.cpp  object_cordinate.cpp
